<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SunShow</string>
    <string name="lb_name">Name:</string>
    <string name="hnt_location">Location name</string>
    <string name="btn_OK">OK</string>
    <string name="lb_longitude">Long:</string>
    <string name="lb_lattitude">Latt:</string>
    <string name="lb_timezone">Timezone:</string>
    <string name="btn_save">Save</string>
    <string name="lb_rise">Rise</string>
    <string name="lb_set">Set</string>
    <string name="sel_current_location">Current location</string>
    <string name="sel_choose_map_g">Choose on map (G)</string>
    <string name="title_activity_lokatie_maps">Select location</string>
    <string name="btn_select">Select</string>
    <string name="msg_permissions">Insufficient permissions granted!</string>
    <string name="msg_noname">No name supplied!</string>
    <string name="dia_location_exists">Location exists</string>
    <string name="dia_location_replace">Replace location **Loc**?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_int_error">Internal error!</string>
    <string name="msg_comm_error">Communication error!</string>
    <string name="msg_server_error">Server error!</string>
    <string name="msg_no_image">No image received!</string>
    <string name="sel_choose_map_osm">Choose on map (OSM)</string>
    <string name="title_marker_selection">Selected location</string>
</resources>